I have made the sign up and login forms work
I made sure the forms work and the input is transferred to the db
I made sure the input is sanitised and no injection can happen
I added a token to make sure that user is logged in when the form is submitted
I added validation for the form - HTML5 for frontend and PHP one for backend.
The backend consists mainly of regex - so I have set some rules for the name, username and password
I managed to fix the functions file and make sure that check_login() can check if the user is logged in and send them to the login.php if not.
I have added signup.php and login.php and they both work as expected
I redirect user to the loggedPage.php after they login and to login.php after they sign-up
I added a logout page where I unset the $_SESSION variable and redirect the user to login page.
I show a message to greet the user when they login to the loggedPage.php using their username

--- a/css/scss/partials/_login-form.scss
+++ b/css/scss/partials/_login-form.scss
@@ -94,7 +94,8 @@ form .form-inner input[type='submit'],
     display: inline-block;
     padding: 10px 15px;
     border-radius: 8px;
-    background-image: linear-gradient(to right, #FFCE00 50%, #FFCE00 50%, #FE4880);
+    // background-image: linear-gradient(to right, #FFCE00 50%, #FFCE00 50%, #FE4880);
+    background-color: $brand-color;
     background-size: 200%;
     background-position: 0%;
     transition: 0.4s;
@@ -106,7 +107,8 @@ form .form-inner input[type='submit'],
 form .form-inner input[type='submit']:hover,
 .welcome button:hover,
 .btn:hover {
-    background-position: 100% 0%;
+    // background-position: 100% 0%;
+    background-color: darken($color: $brand-color, $amount: 10%);
 }
 
 .welcome {
@@ -127,4 +129,8 @@ form .form-inner input[type='submit']:hover,
     color: #FE4880;
     font-weight: 700;
 
+}
+
+.error {
+    color: red;
 }
