--- a/css/scss/partials/_base.scss
+++ b/css/scss/partials/_base.scss
@@ -5,7 +5,7 @@ body {
   font-family: Verdana, Georgia, 'Times New Roman', Times, serif;
   margin-bottom: 50px;
   color: #0a3126;
-  margin-top: 200px;
+  // margin-top: 200px;
 }
 
 a {
