--- a/css/scss/partials/_header.scss
+++ b/css/scss/partials/_header.scss
@@ -40,7 +40,7 @@ header {
 }
 
 .sticky #logo {
-  background-image: url("../../../public/images/favicon.png");
+  background-image: url('../../../public/images/favicon.png');
   background-color: transparent;
   color: $brand-color;
 }
