--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
-@use "scss/partials/base";
-@use "scss/partials/header";
-@use "scss/partials/footer";
-@use "scss/partials/login-form";
+@use 'scss/partials/base';
+@use 'scss/partials/header';
+@use 'scss/partials/footer';
+@use 'scss/partials/login-form';
 
 
