--- a/css/scss/partials/_login-form.scss
+++ b/css/scss/partials/_login-form.scss
@@ -1,12 +1,5 @@
 @use '../abstracts/index' as *;
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: montserrat, sans-serif;
-}
-
 input, button {
     appearance: none;
     background: none;
@@ -14,40 +7,26 @@ input, button {
     outline: none;
 }
 
-.App {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    // background-color: #53565A;
-}
-
 form {
     display: block;
     position: relative;
     max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px;
+    border: 5px $brand-color solid;
+    @media only screen and (min-width: $break-s) {
+        margin: 20px auto;
 }
-
-form::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: -5px;
-    left: -5px;
-    right: -5px;
-    bottom: -5px;
-    // z-index: 1;
-    background-image: linear-gradient(to bottom right, #FECE00, #FE4880);
 }
 
 form .form-inner {
-    position: relative;
-    display: block;
-    background-color: #FFF;
-    padding: 30px;
-    z-index: 2;
+    padding: 20px 0 20px 20px;
+    z-index: 1;
+    @media only screen and (min-width: $break-s) {
+        position: relative;
+        display: block;
+        background-color: #FFF;
+        padding: 30px;
+}
 }
 
 form .form-inner h2 {
@@ -59,8 +38,10 @@ form .form-inner h2 {
 
 form .form-inner .form-group {
     display: block;
-    width: 300px;
     margin-bottom: 15px;
+    @media only screen and (min-width: $break-s) {
+        width: 300px;
+}
 }
 
 .form-inner .form-group label {
@@ -77,13 +58,15 @@ form .form-inner .form-group {
 
 form .form-inner .form-group input {
     display: block;
-    width: 100%;
     padding: 10px 15px;
     background-color: #f8f8f8;
     border-radius: 8px;
     transition: 0.4s;
+    width: 60%;
+    @media only screen and (min-width: $break-s) {
+        width: 100%;
 }
-
+}
 form .form-inner .form-group input:focus {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
@@ -102,6 +85,7 @@ form .form-inner input[type='submit'],
     color: #FFF;
     font-weight: 700;
     cursor: pointer;
+    font-size: 13px;
 }   
 
 form .form-inner input[type='submit']:hover,
@@ -133,4 +117,70 @@ form .form-inner input[type='submit']:hover,
 
 .error {
     color: red;
+}
+
+.green-text {
+    color: $brand-color;
+    font-weight: 600;
+}
+
+.gray-text {
+    color: gray;
+    font-size: 12px;
+}
+
+.fa-eye {
+    position: absolute;
+    bottom: 41%;
+    left: 60%;
+    cursor: pointer;
+    @media only screen and (min-width: $break-s) {
+        bottom: 163px;
+        left: 330px;
+}
+}
+.fa-eye-signup {
+    bottom: 30%;
+    @media only screen and (min-width: $break-s) {
+        bottom: 144px;
+}
+}
+
+//SIGN UP FORM 
+//Sign up form extra info about the username and password
+.form-group {
+    span {
+        display: none;
+        font-size: 13px;
+    }
+    
+     input {
+        display: block;
+        margin-bottom: 8px;
+        
+        &:focus {
+          + span {
+            background: #f4f4f4;
+            border-radius: 4px;
+            display: inline-block;
+            padding: 4px 8px;
+            position: absolute;
+            max-width: 60%;
+            @media only screen and (min-width: $break-s) {
+                max-width: 315px;
+        
+        }
+            &:before {
+              border-top: 6px solid transparent;
+              border-bottom: 6px solid #f4f4f4;
+              border-left: 6px solid transparent;
+              border-right: 6px solid transparent;
+              content: "";
+              position: absolute;
+              top: -12px; left: 12px;
+              width: 0; height: 0;
+            }
+          }
+        }
+      }
 }
