--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 body {
   font-family: Verdana, Georgia, "Times New Roman", Times, serif;
-  margin-bottom: 50px;
   color: #0a3126;
+}
+
+* {
+  margin: 0;
 }
 
 a {
@@ -23,6 +26,7 @@ header {
   display: flex;
   justify-content: space-between;
   transition: all 0.4s ease-out;
+  z-index: 2;
 }
 @media only screen and (min-width: 1260px) {
   header {
@@ -104,6 +108,7 @@ header {
   bottom: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 2;
 }
 
 #header-small {
@@ -139,7 +144,7 @@ header {
   height: 55px;
   width: 65px;
   border-radius: 4px;
-  z-index: 1;
+  z-index: 2;
 }
 @media only screen and (min-width: 992px) {
   .btn-menu-xs {
@@ -222,6 +227,7 @@ footer {
 }
 
 #footer-container {
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -235,6 +241,11 @@ footer {
   #footer-container {
     justify-content: space-around;
   }
+}
+
+#footer-container div {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 footer h4 {
@@ -256,6 +267,7 @@ footer li {
 
 #copyright {
   margin-left: 20px;
+  padding-top: 20px;
   padding-bottom: 20px;
   text-align: left;
 }
@@ -276,13 +288,6 @@ footer li {
   -webkit-transform: rotate(-45deg);
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: montserrat, sans-serif;
-}
-
 input, button {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -292,38 +297,30 @@ input, button {
   outline: none;
 }
 
-.App {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 form {
   display: block;
   position: relative;
   max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 20px;
+  border: 5px #2fa38d solid;
 }
-
-form::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  right: -5px;
-  bottom: -5px;
-  background-image: linear-gradient(to bottom right, #FECE00, #FE4880);
+@media only screen and (min-width: 576px) {
+  form {
+    margin: 20px auto;
+  }
 }
 
 form .form-inner {
-  position: relative;
-  display: block;
-  background-color: #FFF;
-  padding: 30px;
-  z-index: 2;
+  padding: 20px 0 20px 20px;
+  z-index: 1;
+}
+@media only screen and (min-width: 576px) {
+  form .form-inner {
+    position: relative;
+    display: block;
+    background-color: #FFF;
+    padding: 30px;
+  }
 }
 
 form .form-inner h2 {
@@ -335,8 +332,12 @@ form .form-inner h2 {
 
 form .form-inner .form-group {
   display: block;
-  width: 300px;
   margin-bottom: 15px;
+}
+@media only screen and (min-width: 576px) {
+  form .form-inner .form-group {
+    width: 300px;
+  }
 }
 
 .form-inner .form-group label {
@@ -353,11 +354,16 @@ form .form-inner .form-group {
 
 form .form-inner .form-group input {
   display: block;
-  width: 100%;
   padding: 10px 15px;
   background-color: #f8f8f8;
   border-radius: 8px;
   transition: 0.4s;
+  width: 60%;
+}
+@media only screen and (min-width: 576px) {
+  form .form-inner .form-group input {
+    width: 100%;
+  }
 }
 
 form .form-inner .form-group input:focus {
@@ -377,6 +383,7 @@ form .form-inner input[type=submit],
   color: #FFF;
   font-weight: 700;
   cursor: pointer;
+  font-size: 13px;
 }
 
 form .form-inner input[type=submit]:hover,
@@ -406,4 +413,70 @@ form .form-inner input[type=submit]:hover,
 
 .error {
   color: red;
+}
+
+.green-text {
+  color: #2fa38d;
+  font-weight: 600;
+}
+
+.gray-text {
+  color: gray;
+  font-size: 12px;
+}
+
+.fa-eye {
+  position: absolute;
+  bottom: 41%;
+  left: 60%;
+  cursor: pointer;
+}
+@media only screen and (min-width: 576px) {
+  .fa-eye {
+    bottom: 163px;
+    left: 330px;
+  }
+}
+
+.fa-eye-signup {
+  bottom: 30%;
+}
+@media only screen and (min-width: 576px) {
+  .fa-eye-signup {
+    bottom: 144px;
+  }
+}
+
+.form-group span {
+  display: none;
+  font-size: 13px;
+}
+.form-group input {
+  display: block;
+  margin-bottom: 8px;
+}
+.form-group input:focus + span {
+  background: #f4f4f4;
+  border-radius: 4px;
+  display: inline-block;
+  padding: 4px 8px;
+  position: absolute;
+  max-width: 60%;
+}
+@media only screen and (min-width: 576px) {
+  .form-group input:focus + span {
+    max-width: 315px;
+  }
+}
+.form-group input:focus + span:before {
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid #f4f4f4;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  content: "";
+  position: absolute;
+  top: -12px;
+  left: 12px;
+  width: 0;
+  height: 0;
 }/*# sourceMappingURL=style.css.map */
