--- a/css/style.css
+++ b/css/style.css
@@ -393,17 +393,24 @@ form .form-inner input[type=submit]:hover,
 }
 
 .welcome {
-  width: 100%;
-  max-width: 480px;
   background-color: #FFF;
-  padding: 15px 30px;
+}
+@media only screen and (min-width: 576px) {
+  .welcome {
+    padding: 15px 30px;
+  }
 }
 
 .welcome h2 {
   color: #888;
-  font-size: 28px;
+  font-size: 18px;
   font-weight: 500;
   margin-bottom: 30px;
+}
+@media only screen and (min-width: 576px) {
+  .welcome h2 {
+    font-size: 28px;
+  }
 }
 
 .welcome h2 span {
